--- a/Übung05.tex
+++ b/Übung05.tex
@@ -85,6 +85,7 @@
 	urlcolor=black,
 	citecolor=black,
 	pdfencoding=auto,
+	ngerman
 ]{hyperref}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -392,7 +393,7 @@ c) Geben Sie eine Top-Down Analyserechnung des Top-Down Analyseautomaten zur CFG
 	\label{tab:some_words_of_language_one_and_two}
 \end{table}
 
-Beweis durch Angabe eines Gegenbeispiels: Aus der \autoref{tab:some_words_of_language_one_and_two} kann entnommen werden, dass beide Sprachen die selben Wörter erzeugen, wenn gilt $n=m$. Somit ergibt sich aus dem Schnitt der beiden Sprachen die folgende Sprache:
+Beweis durch Angabe eines Gegenbeispiels: Aus der \autoref{tab:some_words_of_language_one_and_two} kann entnommen werden, dass beide Sprachen die selben Wörter erzeugen, wenn $n=m$ gilt. Somit ergibt sich aus dem Schnitt der beiden Sprachen die folgende Sprache:
 
 \begin{align}
 L_1 \cap L_2 &= \{a^n b^n c^n \mid n > 0\} \nonumber
