--- a/Übung05.tex
+++ b/Übung05.tex
@@ -302,7 +302,7 @@ P = \{ \\\
 \end{equation}
 
 Nun die Umformung in CNF:
-Für die Umformung die nicht alleinstehende Terminale in Variablen überführen. Werden mehr als zwei Nichtterminale auf der rechten Regelseite vorkommen werden diese durch eine neue Variable ersetzt.
+Für die Umformung die nicht alleinstehende Terminale in Variablen überführen. Kommen mehr als zwei Nichtterminale auf der rechten Regelseite vor, so werden diese durch eine neue Variable ersetzt.
 
 Typ 2-Grammatik in CNF:
 $G = (\{S, C, X, D, V_a, V_b, V_c\}, \{a, b, c\}, S, P)$ mit
