Fehler in Grammatik

--- a/Übung05.tex
+++ b/Übung05.tex
@@ -366,7 +366,6 @@ P = \{ \\\
 \begin{equation}
 \begin{split}
 &\Rightarrow(z, abccba, S, ) \\\ 
-&\Rightarrow(z, abccba, S, 9) \\\ 
 &\Rightarrow(z, abccba, c, 9) \\\ 
 &c \neq a
 \end{split}
@@ -416,7 +415,7 @@ Der Schnitt zweier Typ 2-Sprachen ist also nicht zwingend wieder vom Typ 2.
 \subsection*{Zeigen Sie, dass die Sprache $L = \left\{a^m b^m c^m \mid m \geq 1\right\}$ vom Typ 1 ist.}
 
 Ziel: Eine Grammatik von Typ 1 finden.
-$G = (\{S\}, \{a, b, c\}, S, P)$ mit
+$G = (\{S, C, B\}, \{a, b, c\}, S, P)$ mit
 \begin{equation}
 \begin{split}
 P = \{ \\\
